<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprobold"
        android:layout_margin="24dp"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:text="@string/hey_njoin_us"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/signup_bg"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingBottom="16dp"
        android:background="@drawable/upi_bg"
        android:orientation="vertical">

        <View
            android:layout_marginTop="28dp"
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprobold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/your_good_name"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/john_doe"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textSize="32sp"
            android:textColorHint="#CFCACA"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprobold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/your_sweet_email"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_placeholder"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textSize="32sp"
            android:textColorHint="#CFCACA"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprobold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/your_strong_password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/your_password"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textSize="32sp"
            android:textColorHint="#CFCACA"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprobold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/confirm_your_password"/>

        <EditText
            android:id="@+id/et_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/confirm_your_password"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textSize="32sp"
            android:textColorHint="#CFCACA"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom"
            android:layout_height="70dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="32dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="#000000"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/blue"
                android:text="@string/sign_in"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>